tests/NormalTests/paczka1/fuzzy1/71093766.err
Error in line 3: Rbj6 A81 63,6
Error in line 9: Snggh8koRa A671 47,5
Error in line 11: Mb9lgDCO S885 86,3
Error in line 26: Rbj6 A671 56,0
Error in line 32: Rbj6 S885 44,9
